--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 </head>
 
 <body>
-	<div class="sort">Sort</div><!-- /.sort -->
+	<div class="country button">country</div><!-- /.sort -->
+	<div class="population button">population</div><!-- /.sort -->
+	<div class="area button">area</div><!-- /.sort -->
 
 	<!-- csv data from https://www.worlddata.info/downloads/countries.csv -->
 	<div id='content'>
