Do button set up in js not html

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-	<div class="country button">country</div><!-- /.sort -->
-	<div class="population button">population</div><!-- /.sort -->
-	<div class="area button">area</div><!-- /.sort -->
+	
+
+	<div id="buttons"></div><!-- /#buttons -->
 
 	<!-- csv data from https://www.worlddata.info/downloads/countries.csv -->
 	<div id='content'>
