Move buttons to sidebar. Shrink country circles to get more on screen. Adjust continent colours. Add missing continents. Add title for sort at page head

--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
 
 <body>
 
-
-	<div id="buttons"></div><!-- /#buttons -->
-
+	<div id="controls">
+		<h3>Sort by:</h3>
+		<div id="buttons"></div><!-- /#buttons -->	
+	</div><!-- /#controls -->
+	
 	<!-- csv data from https://www.worlddata.info/downloads/countries.csv -->
+
+	<h1 class='info'>Hello</h1>
+	<hr>
 	<div id='content'>
 
 	</div><!-- content -->	
