Add a rotating arrow to show direction of sort

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 	
 	<!-- csv data from https://www.worlddata.info/downloads/countries.csv -->
 
-	<h1 class='info'>Hello</h1>
-	<hr>
+	<h1 class='info'>name</h1>
+	<img class = 'arrow up' src = 'arrow.svg' height='48'>
+
 	<div id='content'>
 
 	</div><!-- content -->	
