Add 'tooltip' info box that appears when hovering over country. (currently only shows country name grabbed from content of div it hovers over)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 		</div><!-- /side -->
 
 		<div class="main">
+			<div class="hoverbox hb_hide"></div><!-- /.info -->
+
 			<h2 class='title'>Countries of the world</h2>
 			<div class="infowrap">
 				<h3>Sorted by&nbsp;</h3><h3 class='info'>name</h3>
