Just a bit of code format tidying

--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-	
-
 	<!-- jQuery so that jquery csv works -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
 	<!-- from https://github.com/evanplaice/jquery-csv/ -->
 	<script type="text/javascript" src="jquery.csv.min.js"></script>
 
 	<script type="text/javascript" src="pvdata.js"></script>
-
 		
 	<title>Data Display</title>
 </head>
@@ -26,6 +22,10 @@
 		<div class="side">
 			<h2>Sort by:</h2>
 			<div id ="buttons"></div><!-- /#buttons -->	
+
+			<h2>Sort by:</h2>
+			<div id ="buttons"></div><!-- /#buttons -->	
+
 		</div><!-- /side -->
 
 		<div class="main">
