Add buttons to indicate values range by adding a border to country. Currently only indicated countries with area, pop, life expect field < 243610 (size of uk)

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 	<div class="container">
 		<div class="side">
 			<h2>Sort by:</h2>
-			<div id ="buttons"></div><!-- /#buttons -->	
+			<div id ="sortbuttons"></div><!-- /#buttons -->	
 
-			<h2>Sort by:</h2>
-			<div id ="buttons"></div><!-- /#buttons -->	
+			<h2>Colour by:</h2>
+			<div id ="colourbuttons"></div><!-- /#buttons -->	
 
 		</div><!-- /side -->
 
