--- a/index.html
+++ b/index.html
@@ -3,36 +3,36 @@
 <html>
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
 
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel='stylesheet' type='text/css' href='style.css'>
 
 	<!-- jQuery so that jquery csv works -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js'></script>
 	<!-- from https://github.com/evanplaice/jquery-csv/ -->
-	<script type="text/javascript" src="jquery.csv.min.js"></script>
+	<script type='text/javascript' src='jquery.csv.min.js'></script>
 
-	<script type="text/javascript" src="pvdata.js"></script>
+	<script type='text/javascript' src='pvdata.js'></script>
 		
 	<title>Data Display</title>
 </head>
 
 <body>
-	<div class="container">
-		<div class="side">
+	<div class='container'>
+		<div class='side'>
 			<h2>Sort by:</h2>
-			<div id ="sortbuttons"></div><!-- /#buttons -->	
+			<div id ='sortbuttons' class='sideblock'></div><!-- /#buttons -->	
 
 			<h2>Colour by:</h2>
-			<div id ="colourbuttons"></div><!-- /#buttons -->	
+			<div id ='colourbuttons' class='sideblock'></div><!-- /#buttons -->	
 
 		</div><!-- /side -->
 
-		<div class="main">
-			<div class="hoverbox hb_hide"></div><!-- /.info -->
+		<div class='main'>
+			<div class='hoverbox hb_hide'></div><!-- /.info -->
 
 			<h2 class='title'>Countries of the world</h2>
-			<div class="infowrap">
+			<div class='infowrap'>
 				<h3>Sorted by&nbsp;</h3><h3 class='info'>name</h3>
 			</div><!-- /.infowrap -->
 			<div id='content'>
