Make marked countries persist after sort

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<h2>Sort by:</h2>
 			<div id ='sortbuttons' class='sideblock'></div><!-- /#buttons -->	
 
-			<h2>Colour by:</h2>
+			<h2>Mark:</h2>
 			<div id ='colourbuttons' class='sideblock'></div><!-- /#buttons -->	
 
 		</div><!-- /side -->
