Bug fix. Highlighted countries were not being removed from data when 'none' was clicked so when a sort button was pressed again previous highlighted were shown.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div id ='sortbuttons' class='sideblock'></div><!-- /#buttons -->	
 
 			<h2>Mark:</h2>
-			<div id ='colourbuttons' class='sideblock'></div><!-- /#buttons -->	
+			<div id ='hilightbuttons' class='sideblock'></div><!-- /#buttons -->	
 
 		</div><!-- /side -->
 
